# qtIDM

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  resources.qrc
.github/workflows/: build-release.yml
assets/: io.github.qtidm.qtidm.appdata.xml  io.github.qtidm.qtidm.desktop  io.github.qtidm.qtidm.metainfo.xml  io.qtidm.Qtidm.appdata.xml  io.qtidm.Qtidm.desktop  io.qtidm.Qtidm.xml
browser/chrome/: content_bridge.js  external-extension.json.in  manifest.json  popup.css  popup.html  popup.js  service_worker.js
browser/firefox/: background.js  content_bridge.js  manifest.json  popup.css  popup.html  popup.js
browser/native/: io.github.qtidm.native.chrome.json  io.github.qtidm.native.chrome.json.in  io.github.qtidm.native.firefox.json  io.github.qtidm.native.firefox.json.in  io.qtidm.native.chrome.json.in  io.qtidm.native.firefox.json.in
docs/: BROWSER_EXTENSION_PUBLISHING.md  CAPABILITIES.md  LINUX_DIFFERENCES.md  TEST_PLAN.md
packaging/: build-appimage.sh  build-deb.sh  build-flatpak.sh  common.sh  generate-icons.sh
packaging/appimage/: AppRun
packaging/browser/: build-extensions.sh  chrome-extension-id.sh  ci-extension-version.sh
packaging/debian/: changelog  control  install  rules
packaging/flatpak/: io.github.qtidm.qtidm.yml  io.qtidm.Qtidm.yml
packaging/release/: build-flatpak-bundle.sh  extract-changelog.sh  sync-tag-version.sh  version-info.sh
src/: main.cpp
src/app/: Logger.cpp  Logger.h  Paths.cpp  Paths.h  SingleInstance.cpp  SingleInstance.h
src/core/: ArchiveExtractor.cpp  ArchiveExtractor.h  CurlEpollDownloader.cpp  CurlEpollDownloader.h  DownloadScheduler.cpp  DownloadScheduler.h  DownloadTypes.cpp  DownloadTypes.h  MediaDownloader.cpp  MediaDownloader.h  SiteGrabber.cpp  SiteGrabber.h  SparseFileWriter.cpp  SparseFileWriter.h  ZipPreview.cpp  ZipPreview.h
src/integration/: CredentialVault.cpp  CredentialVault.h  ImportExportService.cpp  ImportExportService.h  MeteredNetworkMonitor.cpp  MeteredNetworkMonitor.h  NativeMessagingHost.cpp  SocialMediaExtractor.cpp  SocialMediaExtractor.h
src/storage/: DownloadRepository.cpp  DownloadRepository.h
src/theme/: ThemeManager.cpp  ThemeManager.h
src/ui/: MainWindow.cpp  MainWindow.h  SegmentGrid.cpp  SegmentGrid.h
tests/: ArchiveExtractorTest.cpp  CredentialVaultTest.cpp  DownloadRepositoryTest.cpp  DownloadSchedulerTest.cpp  DownloadTypesTest.cpp  DownloaderIntegrationTest.cpp  ImportExportServiceTest.cpp  MediaDownloaderTest.cpp  MeteredNetworkMonitorTest.cpp  PackagingMetadataTest.cpp  PerformanceSmokeTest.cpp  SingleInstanceTest.cpp  SiteGrabberTest.cpp  SocialMediaExtractorTest.cpp  SparseFileWriterTest.cpp  ZipPreviewTest.cpp  browser_extension_e2e.py  browser_interception_test.cjs  browser_packaging_test.py  chrome_extension_e2e.cjs
tests/fixtures/: http_test_server.py
